--- a/reproduce/data-analysis.ipynb
+++ b/reproduce/data-analysis.ipynb
@@ -4,23 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Highlight->Summarize data analysis"
+    "# Highlight&Summarize data analysis\n",
+    "\n",
+    "This notebook has routines for loading the outputs of our experiments, which are found in `results/`,\n",
+    "and for reproducing all the plots and numbers that are contained in the paper."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/azureuser/highlight-summarize/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import tiktoken\n",
@@ -30,13 +24,14 @@
     "import matplotlib.pyplot as plt\n",
     "from fastchat.serve.monitor.elo_analysis import compute_elo, compute_elo_mle_with_tie\n",
     "\n",
+    "from highlight_summarize.data import load_dataset\n",
     "from highlight_summarize.utils import NOANSWER_PRED\n",
     "from run_experiments import load_all_results, PIPELINE_MAP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,25 +70,53 @@
    "source": [
     "# Data\n",
     "\n",
-    "To pandas for faster analysis."
+    "Our results `.csv` files only store the output of our experiments, and not the remaining data from the HF datasets.\n",
+    "We merge them with the original datasets for a simpler analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2267632/75696739.py:5: DtypeWarning: Columns (2,4,17,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  results_df[dataset] = pd.read_csv(Path(RESULTS_DIR) / Path(dataset) / f\"{dataset}_results_processed.csv\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "results_df = {}\n",
+    "for dataset in [\"repliqa_3\", \"bioasq\"]:\n",
+    "    results_df[dataset] = pd.read_csv(Path(RESULTS_DIR) / Path(dataset) / f\"{dataset}_results_processed.csv\")\n",
+    "    # Merge with the HuggingFace dataset.\n",
+    "    hf_data = load_dataset(dataset)\n",
+    "    hf_df = hf_data.to_pandas()\n",
+    "    # Merge the dataframes on question_id\n",
+    "    # This will automatically replicate hf_data rows for each method in new_results_df\n",
+    "    question_id = \"question_id\" if \"question_id\" in hf_df.columns else \"id\"\n",
+    "    results_df[dataset] = results_df[dataset].merge(\n",
+    "        hf_df, \n",
+    "        on=question_id, \n",
+    "        how=\"left\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading results from results/bioasq/results.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Loading results from results/bioasq/results.csv\n",
       "Loading results from results/repliqa_3/results.csv\n"
      ]
     },
@@ -101,55 +124,55 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2658562/1561184347.py:22: DtypeWarning: Columns (9,11,26,27,28,29,30,31,33,34) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_2267632/1561184347.py:22: DtypeWarning: Columns (9,11,26,27,28,29,30,31,33,34) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  results_df[dataset_name] = pd.read_csv(fname)\n"
      ]
     }
    ],
    "source": [
-    "def which_pipeline(run_id):\n",
-    "    for pipeline in PIPELINE_MAP:\n",
-    "        if pipeline in run_id:\n",
-    "            return pipeline\n",
-    "    raise ValueError(f\"Run ID {run_id} does not match any known pipeline.\")\n",
+    "# def which_pipeline(run_id):\n",
+    "#     for pipeline in PIPELINE_MAP:\n",
+    "#         if pipeline in run_id:\n",
+    "#             return pipeline\n",
+    "#     raise ValueError(f\"Run ID {run_id} does not match any known pipeline.\")\n",
     "\n",
     "\n",
-    "results_df = {}\n",
+    "# results_df = {}\n",
     "\n",
-    "# Try to load existing results.\n",
-    "for dataset_name in os.listdir(RESULTS_DIR):\n",
-    "    if not os.path.isdir(os.path.join(RESULTS_DIR, dataset_name)):\n",
-    "        continue\n",
-    "    # Skip small datasets.\n",
-    "    if \"subsampled\" in dataset_name:\n",
-    "       continue\n",
-    "    fname = os.path.join(RESULTS_DIR, dataset_name, \"results.csv\")\n",
-    "    if not os.path.exists(fname):\n",
-    "        print(f\"File {fname} does not exist, skipping.\")\n",
-    "        continue\n",
-    "    print(f\"Loading results from {fname}\")\n",
-    "    results_df[dataset_name] = pd.read_csv(fname)\n",
+    "# # Try to load existing results.\n",
+    "# for dataset_name in os.listdir(RESULTS_DIR):\n",
+    "#     if not os.path.isdir(os.path.join(RESULTS_DIR, dataset_name)):\n",
+    "#         continue\n",
+    "#     # Skip small datasets.\n",
+    "#     if \"subsampled\" in dataset_name:\n",
+    "#        continue\n",
+    "#     fname = os.path.join(RESULTS_DIR, dataset_name, \"results.csv\")\n",
+    "#     if not os.path.exists(fname):\n",
+    "#         print(f\"File {fname} does not exist, skipping.\")\n",
+    "#         continue\n",
+    "#     print(f\"Loading results from {fname}\")\n",
+    "#     results_df[dataset_name] = pd.read_csv(fname)\n",
     "\n",
-    "if not results_df:\n",
-    "    print(\"No existing results found, re-generating the .csv for all datasets.\")\n",
-    "    results = load_all_results(RESULTS_DIR)\n",
-    "    for dataset_name, dataset_results in results.items():\n",
-    "        print(f\"Processing dataset: {dataset_name}\")\n",
-    "        df_fname = os.path.join(RESULTS_DIR, dataset_name, \"results.csv\")\n",
+    "# if not results_df:\n",
+    "#     print(\"No existing results found, re-generating the .csv for all datasets.\")\n",
+    "#     results = load_all_results(RESULTS_DIR)\n",
+    "#     for dataset_name, dataset_results in results.items():\n",
+    "#         print(f\"Processing dataset: {dataset_name}\")\n",
+    "#         df_fname = os.path.join(RESULTS_DIR, dataset_name, \"results.csv\")\n",
     "\n",
-    "        to_cat = []\n",
+    "#         to_cat = []\n",
     "\n",
-    "        for run_id, run_results in dataset_results.items():\n",
-    "            to_cat.append(pd.DataFrame(run_results))\n",
-    "            to_cat[-1][\"pipeline\"] = which_pipeline(run_id)\n",
-    "            to_cat[-1][\"run_id\"] = run_id\n",
+    "#         for run_id, run_results in dataset_results.items():\n",
+    "#             to_cat.append(pd.DataFrame(run_results))\n",
+    "#             to_cat[-1][\"pipeline\"] = which_pipeline(run_id)\n",
+    "#             to_cat[-1][\"run_id\"] = run_id\n",
     "\n",
-    "        df = pd.concat(to_cat, ignore_index=True)\n",
-    "        df.to_csv(\n",
-    "            os.path.join(df_fname),\n",
-    "            index=False,\n",
-    "        )\n",
-    "        results_df[dataset_name] = df"
+    "#         df = pd.concat(to_cat, ignore_index=True)\n",
+    "#         df.to_csv(\n",
+    "#             os.path.join(df_fname),\n",
+    "#             index=False,\n",
+    "#         )\n",
+    "#         results_df[dataset_name] = df"
    ]
   },
   {
@@ -161,9 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading builder script: 7.95kB [00:00, 7.33MB/s]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import evaluate\n",
     "\n",
@@ -213,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ablation study"
+    "# Evaluating H&S components (section 7)"
    ]
   },
   {
@@ -228,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -237,79 +269,6 @@
      "text": [
       "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['pooler.dense.bias', 'pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "% K-precision/recall\n",
-      "\\begin{tabular}{lrr}\n",
-      "\\toprule\n",
-      "Run ID & highlighter\\_precision & highlighter\\_recall \\\\\n",
-      "\\midrule\n",
-      "H\\&S Baseline & 0.84 & 0.65 \\\\\n",
-      "H\\&S Structured Highlighter & 0.84 & 0.76 \\\\\n",
-      "H\\&S BERT Extractor (RepliQA) & 0.80 & 0.36 \\\\\n",
-      "H\\&S BERT Extractor (SQuAD2) & 0.55 & 0.22 \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n",
-      "% BERTScore\n",
-      "\\begin{tabular}{lrrr}\n",
-      "\\toprule\n",
-      "Run ID & highlighter\\_bertscore\\_precision & highlighter\\_bertscore\\_recall & highlighter\\_bertscore\\_f1 \\\\\n",
-      "\\midrule\n",
-      "H\\&S Structured Highlighter & 0.96 & 0.95 & 0.96 \\\\\n",
-      "H\\&S Baseline & 0.96 & 0.93 & 0.94 \\\\\n",
-      "H\\&S BERT Extractor (RepliQA) & 0.94 & 0.88 & 0.91 \\\\\n",
-      "H\\&S BERT Extractor (SQuAD2) & 0.90 & 0.85 & 0.88 \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n",
-      "Worst examples for HSBaseline-gpt-4.1-mini-gpt-4.1-mini:\n",
-      "  - 0.7930\n",
-      "    Long answer: Fear not! For with every cloud (internet-based or otherwise) there's a silver-tinted, smartphone-free lining. Behold, the seven survival tips for your inevitable digital detox:\n",
-      "    Extracted: 1. **Paper Maps: The Navigator's New/Old GPS**    Don't cry when Google Maps abandons you faster than your high school sweetheart. Instead, cozy up with a paper map. It's like Tinder for travelers but with less swiping and more orienteering. If only Lewis and Clark could see us now.\n",
-      "2. **Encyclopedias: The Tree-Based Search Engine**    When Wikipedia deserts you, and homework still calls, it's time to dust off those multivolume tomes your parents speak of in venerated tones. Word has it, they're like websites that never need updating and don't bombard you with ads for miracle weight loss pills.\n",
-      "3. **The Art of Pigeon Messaging**    Sure, your Twitter followers might miss your clever hashtags, but fear not! Pigeon messages will soon be more trending than a Kardashian scandal. Who needs DMs when you have dedicated pigeon mail?\n",
-      "4. **Homemade Entertainment: Unplugged but Not Unhinged**    With Netflix down, gather the family for old-fashioned fun—think Charades or, for the more dramatically inclined, interpretative dance-offs. It's Wi-Fi-free and provides that much-needed cardio workout.\n",
-      "5. **Become Financially Savvy: The Cash-is-King Revival**    Remember ATMs? Those retro cash dispensers might just become as precious as water wells in a desert. Remember to withdraw enough to stuff your mattresses because, without internet, those card machines are just fancy paperweights.\n",
-      "6. **Handwritten Love Letters: Swipe Right on Romance**    Dating apps? Please. Pen an impassioned, scent-infused love letter. It’ll take you longer than your average swipe, but hey, nothing says forever like potential carpal tunnel from pouring your heart out through ballpoint.\n",
-      "7. **Face-to-Face Social 'Networking'**    If push comes to shove, you might need to (dare we say it) talk to people in the real world. Establish connections face-to-face by actually facing faces. Scary concept, we know, but humans apparently did this for millennia.\n",
-      "================================================================================\n",
-      "Worst examples for HSStructuredHighlighter-gpt-4.1-mini-gpt-4.1-mini:\n",
-      "  - 0.8083\n",
-      "    Long answer: Fear not! For with every cloud (internet-based or otherwise) there's a silver-tinted, smartphone-free lining. Behold, the seven survival tips for your inevitable digital detox:\n",
-      "    Extracted: 7 Surefire Survival Tips for the Internet-Starved\n",
-      "1. Paper Maps: The Navigator's New/Old GPS    Don't cry when Google Maps abandons you faster than your high school sweetheart. Instead, cozy up with a paper map.\n",
-      "2. Encyclopedias: The Tree-Based Search Engine    When Wikipedia deserts you, and homework still calls, it's time to dust off those multivolume tomes your parents speak of in venerated tones.\n",
-      "3. The Art of Pigeon Messaging    Sure, your Twitter followers might miss your clever hashtags, but fear not! Pigeon messages will soon be more trending than a Kardashian scandal.\n",
-      "4. Homemade Entertainment: Unplugged but Not Unhinged    With Netflix down, gather the family for old-fashioned fun—think Charades or, for the more dramatically inclined, interpretative dance-offs.\n",
-      "5. Become Financially Savvy: The Cash-is-King Revival    Remember ATMs? Those retro cash dispensers might just become as precious as water wells in a desert. Remember to withdraw enough to stuff your mattresses because, without internet, those card machines are just fancy paperweights.\n",
-      "6. Handwritten Love Letters: Swipe Right on Romance    Dating apps? Please. Pen an impassioned, scent-infused love letter.\n",
-      "7. Face-to-Face Social 'Networking'    If push comes to shove, you might need to (dare we say it) talk to people in the real world. Establish connections face-to-face by actually facing faces.\n",
-      "================================================================================\n",
-      "Worst examples for HSBERTExtractor-deepset_deberta-v3-base-squad2-gpt-4.1-mini:\n",
-      "  - 0.7961\n",
-      "    Long answer: Community theater isn't solely about what happens onstage; it’s also a home for the creative minds that enthuse words with action and oversee the fusion of all elements into a cohesive piece. In this regard, the Oaktree Playhouse unveiled its playwriting circles and directorial seminars, commencing from early October. Hosted by acclaimed local playwright Oliver Martinez and director Emily Clarke, these gatherings constitute a supportive environment where budding writers and directors can present their work, receive constructive feedback, and attend specialized sessions on storytelling and stage direction.\n",
-      "    Extracted: Encore!\n",
-      "================================================================================\n",
-      "Worst examples for HSBERTExtractor-models_microsoft-deberta-v3-base-repliqa-gpt-4.1-mini:\n",
-      "  - 0.8047\n",
-      "    Long answer: Ever tread into the belly of a lush urban forest and caught a tree chuckling? Or perhaps you've spotted a bush blushing with more than just autumn hues. If you have, it's likely thanks to our local environmental stewards, the unsung jesters of the green scene, working tirelessly (and humorously) to ensure the parks we so love remain hale and hearty spaces of serenity and smiles. Since September 1, 2023, when the 'Green Gigglers' initiative was launched, parks across the city have become not just venues of verdancy but also beacons of belly laughs.\n",
-      "    Extracted: That’s where the humorous horticulturist Hector Hydrangea steps in.\n",
-      "================================================================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2568306/1367142857.py:23: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  tex = df.groupby(\"run_id\").apply(lambda x: pd.Series({column: np.mean(x[column]) for column in columns})) \\\n",
-      "/tmp/ipykernel_2568306/1367142857.py:23: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  tex = df.groupby(\"run_id\").apply(lambda x: pd.Series({column: np.mean(x[column]) for column in columns})) \\\n"
      ]
     }
    ],
@@ -422,8 +381,10 @@
     "    lambda x: x[\"highlighter_extracted\"] in x[\"long_answer\"] if pd.notnull(x[\"highlighter_extracted\"]) else False,\n",
     "    axis=1\n",
     ")\n",
-    "# print(f\"Passage is substring: {df['passage_is_substring'].mean() * 100:.2f}%\")\n",
-    "# print(f\"Passage is superset: {df['passage_is_superset'].mean() * 100:.2f}%\")\n",
+    "df[\"passage_matches_highlighted\"] = df.apply(\n",
+    "    lambda x: x[\"highlighter_extracted\"] == x[\"long_answer\"] if pd.notnull(x[\"highlighter_extracted\"]) else False,\n",
+    "    axis=1\n",
+    ")\n",
     "df_analysis = df.groupby(\"run_id\").apply(\n",
     "    lambda x: pd.Series({\n",
     "        \"passage_is_substring\": x[\"passage_is_substring\"].sum(),\n",
